--- a/zipkin-server/src/main/resources/zipkin-server-shared.yml
+++ b/zipkin-server/src/main/resources/zipkin-server-shared.yml
@@ -175,14 +175,14 @@ zipkin:
       max-active: ${MYSQL_MAX_CONNECTIONS:10}
       use-ssl: ${MYSQL_USE_SSL:false}
     clickhouse:
-      url: jdbc:ch://10.98.51.166:8123,10.98.3.70:8123,10.98.9.152:8123
-      database: log
+      url: ${CH_URL:jdbc:ch://10.98.51.166:8123,10.98.3.70:8123,10.98.9.152:8123}
+      database: ${CH_DB:log}
       # span存储的表明
-      spanTable: zipkin_spans
-      traceTable: zipkin_spans_trace
+      spanTable: ${CH_SPAN_TABLE:zipkin_spans}
+      traceTable: ${CH_TRACE_TABLE:zipkin_spans_trace}
       # 需要服务名的时间窗口 1d
-      namesLookback: 86400000
-      batchSize: 100000
+      namesLookback: ${CH_NAMES_LOOK_BACK:86400000}
+      batchSize: ${CH_BATCH_SIZE:100000}
   ui:
     enabled: ${QUERY_ENABLED:true}
     ## Values below here are mapped to ZipkinUiProperties, served as /config.json
