--- a/zipkin-server/src/main/resources/zipkin-server-shared.yml
+++ b/zipkin-server/src/main/resources/zipkin-server-shared.yml
@@ -42,6 +42,8 @@ zipkin:
       group-id: ${KAFKA_GROUP_ID:zipkin}
       # Count of consumer threads consuming the topic
       streams: ${KAFKA_STREAMS:1}
+      overrides:
+        auto.offset.reset: latest
     rabbitmq:
       enabled: ${COLLECTOR_RABBITMQ_ENABLED:false}
       # RabbitMQ server address list (comma-separated list of host:port)
