--- a/zipkin-server/src/main/resources/zipkin-server-shared.yml
+++ b/zipkin-server/src/main/resources/zipkin-server-shared.yml
@@ -185,6 +185,7 @@ zipkin:
       # 需要服务名的时间窗口 1d
       namesLookback: ${CH_NAMES_LOOK_BACK:86400000}
       batchSize: ${CH_BATCH_SIZE:100000}
+      parallelWriteSize: ${CH_PARALLEL_WRITE_SIZE:2}
   ui:
     enabled: ${QUERY_ENABLED:true}
     ## Values below here are mapped to ZipkinUiProperties, served as /config.json
