--- a/zipkin-server/src/main/resources/zipkin-server-shared.yml
+++ b/zipkin-server/src/main/resources/zipkin-server-shared.yml
@@ -177,16 +177,18 @@ zipkin:
       max-active: ${MYSQL_MAX_CONNECTIONS:10}
       use-ssl: ${MYSQL_USE_SSL:false}
     clickhouse:
-      url: ${CH_URL:jdbc:ch://10.98.51.166:8123,10.98.3.70:8123,10.98.9.152:8123}
+      endpoint: ${CH_ENDPOINT:http://clickhouse.tyc.io:8123}
+      username: ${CH_USERNAME:default}
+      password: ${CH_PASSWORD:}
       database: ${CH_DB:log}
       # span存储的表明
-      spanTable: ${CH_SPAN_TABLE:zipkin_spans}
-      traceTable: ${CH_TRACE_TABLE:zipkin_spans_trace}
+      spanTable: ${CH_SPAN_TABLE:zipkin_spans_dist}
+      traceTable: ${CH_TRACE_TABLE:zipkin_spans_trace_dist_mv}
       # 需要服务名的时间窗口 1d
       namesLookback: ${CH_NAMES_LOOK_BACK:86400000}
-      batchSize: ${CH_BATCH_SIZE:10000}
+      batchSize: ${CH_BATCH_SIZE:100000}
       parallelWriteSize: ${CH_PARALLEL_WRITE_SIZE:2}
-      schedulingTime: ${CH_SCHEDULING_TIME:1}
+      schedulingTime: ${CH_SCHEDULING_TIME:10}
   ui:
     enabled: ${QUERY_ENABLED:true}
     ## Values below here are mapped to ZipkinUiProperties, served as /config.json
