--- a/zipkin-server/src/main/resources/zipkin-server-shared.yml
+++ b/zipkin-server/src/main/resources/zipkin-server-shared.yml
@@ -95,7 +95,7 @@ zipkin:
     autocomplete-keys: ${AUTOCOMPLETE_KEYS:tagsAppname,tagsHttpPath,tagsRpcService}
     autocomplete-ttl: ${AUTOCOMPLETE_TTL:3600000}
     autocomplete-cardinality: 20000
-    type: ${STORAGE_TYPE:clickhouse}
+    type: ${STORAGE_TYPE:elasticsearch}
     throttle:
       enabled: ${STORAGE_THROTTLE_ENABLED:false}
       min-concurrency: ${STORAGE_THROTTLE_MIN_CONCURRENCY:10}
